Fix buttons overflowing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,6 @@ img {
 .menu {
   position: relative;
   margin: 0 auto;
-  max-width: 739px;
   top: 0px;
   text-align: center;
   font-weight: bold;
